--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -501,3 +501,21 @@ tr.ltblue {
 	background-color: #CCFFFF;
 }
 
+.topItem
+{
+  background: #cbfecb;
+  padding-left:25px;
+  height:22px;
+  cursor:pointer;
+  text-decoration: none;
+  color: #009900; 
+  border: 1px solid #00FF36;
+  font-size: small;
+}
+
+.dropMenu
+{
+  background:#edffed;
+  border:1px solid #00FF36;
+
+}
