added support for different viewers

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -550,8 +550,8 @@ Number of sequences:
   <TD>
     <DIV class="small">
      <select id="viewer" onChange="checkViewer()">
-     <option selected value="flash">Flash Viewer</option>
-     <option value = "html">HTML</option> 
+     <option selected value="flash">GeLo Flash Viewer</option>
+     <option value = "html">GeLo HTML Viewer</option> 
     </DIV>
   </TD>
  </TR>
