--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -2,84 +2,57 @@
 <HEAD>
  <TITLE><TMPL_VAR NAME=TITLE></TITLE>
  <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
- <link rel="stylesheet" type="text/css" href="/CoGe/css/sddm.css" />
 
- <link rel="stylesheet" type="text/css" href="css/tiler.css">
 
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
-
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/kaj.stable.js"></SCRIPT>
+<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.js"></SCRIPT>
 <SCRIPT language="JavaScript">
-
-<!--kaj.pollute();-->
 
 function search_chain(val) {
  minlen = 4;
- if ((val == 1) && (kaj.GS('accn').length > minlen)){
+ if ((val == 1) && ($('#accn').val().length > minlen)){
    return;
  } 
- kaj.GS('DS_title','');
- kaj.GS('FT_title','');
- kaj.GS('accn_list','<input type="hidden" id="accn_select">');	
- kaj.GS('Source','<input type="hidden" id="dsid">');	
- kaj.GS('FeatType','<input type="hidden" id="Type_name">');	
- kaj.GS('anno','');	
- if (val == 1 || kaj.GS('accn').length > minlen) {
-//   kaj.GS('DS_title','<font class="loading">Searching. . .</font>');// for "'+kaj.GS('accn')+'" type '+''+'. . .</font>');
+ $('#accn_list').html('<input type="hidden" id="accn_select">');	
+ $('#Source').html('<input type="hidden" id="dsid">');	
+ $('#FeatType').html('<input type="hidden" id="Type_name">');	
+ $('#anno').hide();	
+ if (val == 1 || $('#accn').val().length > minlen) {
    cogesearch(['accn', 'type', 'org'],[source_search_chain]); 
  }
 }
 
 function source_search_chain (val) {
- kaj.GS('DS_title','');
- kaj.GS('FT_title','');
- kaj.GS('Source','<input type="hidden" id="dsid"><font class="loading">Loading. . .</font>');	
- kaj.GS('FeatType','<input type="hidden" id="Type_name">');	
- kaj.GS('anno','');	
- if (val) {kaj.GS('accn_list',val);}
+// $('#Source').html('<input type="hidden" id="dsid"><font class="loading">Loading. . .</font>');	
+// $('#FeatType').html('<input type="hidden" id="Type_name">');	
+// $('#anno').hide();	
+ if (val) {$('#accn_list').html(val);}
  source_search(['accn_select'], [get_types_chain]);
 }
 
 function get_types_chain (val1, val2) {
- kaj.GS('FT_title','');
- kaj.GS('FeatType','<input type="hidden" id="Type_name"><font class="loading">Loading. . .</font>');	
- kaj.GS('anno','');	
- if (val1) {kaj.GS('Source', val1);}
-// if (val2) {kaj.GS('DS_title', "Dataset");}
+// $('#FeatType').html('<input type="hidden" id="Type_name"><font class="loading">Loading. . .</font>');	
+// $('#anno').hide();	
+ if (val1) {$('#Source').html(val1);}
  get_types(['accn_select', 'dsid'],[get_anno_chain]);	
 }
 
 function get_anno_chain (val1, val2) {	
-kaj.GS('anno','<font class="loading">Loading. . .</font>');
- if (val1) {kaj.GS('FeatType', val1)};
-// if (val2) {kaj.GS('FT_title', "Type Name");}
- as = kaj.G('accn_select');
-// v = kaj.G('version');
- tn = kaj.G('Type_name');
- get_anno(['accn_select', 'Type_name', 'dsid'],['anno']);	
+//$('#anno').html('<font class="loading">Loading. . .</font>');
+ if (val1) {$('#FeatType').html(val1)};
+ as = $('#accn_select').val();
+ tn = $('#Type_name').val();
+ get_anno(['accn_select', 'Type_name', 'dsid'],[show_anno]);
+ 
 }
 
-function tiler_setup (html, id)
+function show_anno (anno)
  {
-   kaj.GS(id,html);
-   omap = new Tiler('container',[config]);
-   var qurl = 'http://toxic.berkeley.edu/CoGe/FeatAnno.pl?';
-   addEvent(G('container'),'click',query);	
-}
-
-function query(e){
-   var xy = e.getItemXY(); 
-   xy = this.pix_to_real_world(xy[0],xy[1])[0];
-   var url = qurl + 'chr='+ G('chr').value + '&di='+G('di').value + '&loc='+ xy;
-   jfetch(url,placeanno);
-}
-
-function placeanno(stuff) {
- //  document.info.info.value = stuff; 
-  kaj.GS('info', stuff);
-}
-
+ $('#anno').hide(); 
+ $('#anno').html(anno);
+ $('#anno').show("slow"); 
+ }
 
 </SCRIPT>
 <TABLE>
@@ -113,10 +86,6 @@ function placeanno(stuff) {
      </TABLE>
    </DIV>
   </TD>
-  <TD valign=top>
-   <DIV id="DS_title"></DIV>
-  <TD valign=top>
-   <DIV id="FT_title"></DIV>
  <TR valign=top>
   <TD valign=top>
    <DIV class="" id="accn_list"><input type="hidden" id="accn_select" ></DIV>
@@ -129,6 +98,6 @@ function placeanno(stuff) {
 </TABLE>
 <DIV id="anno"></DIV>
 <SCRIPT language="Javascript">
-  if (kaj.GS('accn')) {search_chain(0);};
+  if ($('#accn')) {search_chain(0);};
 </SCRIPT>
 
