a couple of more things from gobe.css

--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -519,3 +519,13 @@ tr.ltblue {
   border:1px solid #00FF36;
 
 }
+
+.blue {
+    color:blue;
+    size:13px;
+}
+
+.big {
+    color:gray;
+    size: 20px;
+}
