changed path of help files to be in docs directory

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -39,7 +39,7 @@ function getBrowser()
     <TR>
      <TD align=right><TMPL_IF NAME="CLOSE"><INPUT type = 'button' value= 'Close Window' onClick='window.close()'></TMPL_IF>
      </TD>
-     <TD align=right><TMPL_IF NAME="HELP"><a href="./help/<TMPL_VAR NAME=HELP>"><img src="./picts/help-logo.png" border=0></a></TMPL_IF>
+     <TD align=right><TMPL_IF NAME="HELP"><a href="./docs/help/<TMPL_VAR NAME=HELP>"><img src="./picts/help-logo.png" border=0></a></TMPL_IF>
      </TD>
    </TR>
   </TABLE>
