added removal of HSP colors when sequence is removed

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -227,7 +227,7 @@ $('#refseq'+num_seqs).html("");
 num_seqs--;
 $('#num_seqs').val(num_seqs);
 gen_go_button(['num_seqs'],['go_button']);
-
+gen_hsp_colors(['num_seqs'],['hsp_colors']);
 }
 
 function add_new_refseq(val)
